--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
       <p><strong>Server</strong>center.mx</p>
     </div>
     <ul class="nav-links">
-      <li><a href="/inicio">Inicio</a></li>
+    <!--<li><a href="/inicio">Inicio</a></li>-->
       <li><a href="/login">Inicio de Sesion</a></li>
-      <li><a href="/acerca">Acerca de</a></li>
-      <li><a href="/servicios">Servicios</a></li>
-      <li><a href="/contacto">Contacto</a></li>
+    <!--<li><a href="/acerca">Acerca de</a></li>-->
+    <!--<li><a href="/servicios">Servicios</a></li>-->
+    <!--<li><a href="/contacto">Contacto</a></li>-->
     </ul>
   </nav>
 </div>
