Se agrega la pagina de inicio, ademas del componente header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
-<div class="header" *ngIf="showHeader">
+<!--<div class="header" *ngIf="showHeader">
   <nav class="navbar">
     <div class="logo">
       <p><strong>Server</strong>center.mx</p>
     </div>
-    <ul class="nav-links">
+    <ul class="nav-links">-->
     <!--<li><a href="/inicio">Inicio</a></li>-->
-      <li><a href="/login">Inicio de Sesion</a></li>
+     <!-- <li><a href="/login">Inicio de Sesion</a></li>-->
     <!--<li><a href="/acerca">Acerca de</a></li>-->
     <!--<li><a href="/servicios">Servicios</a></li>-->
     <!--<li><a href="/contacto">Contacto</a></li>-->
-    </ul>
+   <!-- </ul>
   </nav>
 </div>
 <div class="content">
-</div>
+</div>-->
 <router-outlet></router-outlet>
