--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,14 +12,14 @@
       <!-- Menú para desktop -->
       <nav class="desktop-nav">
         <ul>
-          <!-- <li><a routerLink="/inicio" routerLinkActive="active">Inicio</a></li> -->
-          <!-- <li><a routerLink="/servicios" routerLinkActive="active">Servicios</a></li> -->
-          <!-- <li><a routerLink="/contacto" routerLinkActive="active">Contacto</a></li> -->
-          <li *ngIf="showLogin">
+          <li><a routerLink="/inicio" routerLinkActive="active">Inicio</a></li> 
+          <li><a routerLink="/servicios" routerLinkActive="active">Servicios</a></li>
+          <li><a routerLink="/contacto" routerLinkActive="active">Contacto</a></li>
+          <!--<li *ngIf="showLogin">
             <a routerLink="/login" routerLinkActive="active" class="login-btn">
               Inicio de Sesión
             </a>
-          </li>
+          </li>-->
         </ul>
       </nav>
   
