--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,15 +1,50 @@
-<div class="contact-container">
-    <div class="contact-card">
-      <div class="profile-pic">
-        <img src="../../assets/imagenes/Productos/DiscoDuro.JPG" alt="Foto de contacto" />
-      </div>
-      <div class="contact-info">
-        <h2>Carlos Gomez</h2>
-        <p><strong>Teléfono:</strong> +52 5616881689</p>
-        <p><strong>Correo:</strong> Carlos Gomez</p>
-        <p><strong>Dirección:</strong> Calle Principal #123, Ciudad de México</p>
-        <!--<button (click)="sendMessage()">Enviar Mensaje</button>-->
-      </div>
+<!-- ENCABEZADO -->
+<app-header 
+  [variant]="headerConfig.variant"
+  [showLogin]="headerConfig.showLogin"
+  [showOnMobile]="headerConfig.showOnMobile">
+</app-header>
+<div class="contact-page">
+  <!-- Mapa -->
+  <div class="map-section">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2956.95760071254!2d-99.1883349247827!3d19.548476081755783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTnCsDMyJzU0LjUiTiA5OcKwMTEnMDguNyJX!5e1!3m2!1ses!2smx!4v1752512675830!5m2!1ses!2smx"
+      allowfullscreen
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+
+  <!-- Sección inferior -->
+  <div class="info-sections">
+    <!-- Contacto -->
+    <div class="info-card">
+      <img src="../../assets/imagenes/Fondos/ServerOriginal.jpg" alt="Contacto" class="info-card-img" title="Ing. Carlos Gómez" />  <!--../../assets/imagenes/Fondos/ServerLogo.jfif-->
+      <h3 class="title">Carlos Gómez</h3>
+      <p><strong>Teléfono:</strong> +52 5616881689</p>
+      <p><strong>Correo:</strong> carlos.gomez&#64;servercenter.mx</p>
+      <p><strong>Dirección:</strong> Tlalnepantla, Estado de México</p>
+      <button>Enviar Mensaje</button>
+    </div>
+
+    <!-- Horarios -->
+    <div class="info-card">
+      <img src="" alt="Horarios" class="icon" />
+      <h3 class="title">Horarios de Servicio</h3>
+      <p><strong>Lunes a Viernes:</strong> 9:00 am – 6:00 pm</p>
+      <p><strong>Sábados:</strong> 9:00 am – 6:00 pm</p>
+    </div>
+
+    <!-- Servicios -->
+    <div class="info-card">
+      <img src="" alt="Servicios" class="icon" />
+      <h3 class="title">Servicios</h3>
+      <ul>
+        <li>🛒 Venta de componentes</li>
+        <li>🔍 Diagnóstico de componentes</li>
+        <li>💬 Asesorías</li>
+        <li>🛠 Reparaciones</li>
+      </ul>
     </div>
   </div>
-  
+</div>
