Terminacion de la pagina Acerca de

--- a/src/app/catalogo/catalogo.component.html
+++ b/src/app/catalogo/catalogo.component.html
@@ -1,3 +1,9 @@
+<!-- ENCABEZADO -->
+<app-header 
+  [variant]="headerConfig.variant"
+  [showLogin]="headerConfig.showLogin"
+  [showOnMobile]="headerConfig.showOnMobile">
+</app-header>
 <div class="slider">
   <div class="slides">
     <div class="slide"><img src="../../assets/imagenes/Productos/DiscoDuro.JPG" alt="Imagen 1" /></div>
