--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,9 +12,9 @@
       <!-- Menú para desktop -->
       <nav class="desktop-nav">
         <ul>
-          <li><a routerLink="/inicio" routerLinkActive="active">Inicio</a></li> 
-          <li><a routerLink="/servicios" routerLinkActive="active">Servicios</a></li>
-          <li><a routerLink="/contacto" routerLinkActive="active">Contacto</a></li>
+          <li><a routerLink="/catalogo" routerLinkActive="active">Nuestro Catalogo</a></li> 
+          <!--<li><a routerLink="/servicios" routerLinkActive="active">Servicios</a></li>-->
+          <li><a routerLink="/contacto" routerLinkActive="active">Acerca de Nosotros</a></li>
           <!--<li *ngIf="showLogin">
             <a routerLink="/login" routerLinkActive="active" class="login-btn">
               Inicio de Sesión
