--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -19,17 +19,17 @@
   <div class="info-sections">
     <!-- Contacto -->
     <div class="info-card">
-      <img src="../../assets/imagenes/Fondos/ServerOriginal.jpg" alt="Contacto" class="info-card-img" title="Ing. Carlos Gómez" />  <!--../../assets/imagenes/Fondos/ServerLogo.jfif-->
+      <img src="../../assets/imagenes/Fondos/ServerOriginal.jpg" alt="Contacto" class="info-card-img" title="Servercenter" />  <!--../../assets/imagenes/Fondos/ServerLogo.jfif-->
       <h3 class="title">Carlos Gómez</h3>
       <p><strong>Teléfono:</strong> +52 5616881689</p>
       <p><strong>Correo:</strong> carlos.gomez&#64;servercenter.mx</p>
       <p><strong>Dirección:</strong> Tlalnepantla, Estado de México</p>
-      <button>Enviar Mensaje</button>
+      <!--<button>Enviar Mensaje</button>-->
     </div>
 
     <!-- Horarios -->
     <div class="info-card">
-      <img src="" alt="Horarios" class="icon" />
+      <img src="../../assets/imagenes/Fondos/reloj.jpg" alt="Horarios" class="info-card-img" />
       <h3 class="title">Horarios de Servicio</h3>
       <p><strong>Lunes a Viernes:</strong> 9:00 am – 6:00 pm</p>
       <p><strong>Sábados:</strong> 9:00 am – 6:00 pm</p>
@@ -37,11 +37,11 @@
 
     <!-- Servicios -->
     <div class="info-card">
-      <img src="" alt="Servicios" class="icon" />
+      <img src="../../assets/imagenes/Fondos/herramienta.jpg" alt="Servicios" class="info-card-img" />
       <h3 class="title">Servicios</h3>
       <ul>
-        <li>🛒 Venta de componentes</li>
-        <li>🔍 Diagnóstico de componentes</li>
+        <li>🛒 Venta de componentes electronicos</li>
+        <li>🔍 Diagnóstico de componentes electronicos</li>
         <li>💬 Asesorías</li>
         <li>🛠 Reparaciones</li>
       </ul>
