Se logra la implementacion del codigo de verificacion correctamente, se inicia con el LogIn

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -13,7 +13,7 @@
     <p>Ingrese el código de acceso:</p>
     
     <input 
-      type="text"  
+      type="password"  
       [(ngModel)]="codigoInput" 
       placeholder="Ingrese el código"
       (keyup.enter)="checkCodigo()"
